<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2D8F8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/prof_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="120dp"
        android:background="@drawable/profile_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/update_profile_image"
            android:layout_width="match_parent"
            android:layout_height="114dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/add_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent=".5"
            app:layout_constraintVertical_bias=".25"
            app:layout_constraintHorizontal_bias=".5"
            app:layout_constraintTop_toBottomOf="@id/update_profile_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/editName"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/edit_text_bg"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="38dp"
            android:id="@+id/update_name_textview"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical"
        android:background="@drawable/vie_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="10dp"
        android:id="@+id/full_LinearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/update_Address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"
                android:textAlignment="center"
                android:hint="@string/editAddress"
                android:orientation="horizontal"
                android:paddingLeft="34dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                android:textColorHint="@color/DarkerGrey"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintVertical_bias=".25"
                app:layout_constraintWidth_percent=".5"
                android:gravity="center_horizontal"
                android:lines="4"/>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:alpha="0.5"
            android:background="#585858" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/update_DOB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_horizontal"
                android:hint="@string/editdob"
                android:inputType="date"
                android:orientation="horizontal"
                android:paddingLeft="25dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:textColorHint="@color/DarkerGrey"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintVertical_bias=".25"
                app:layout_constraintWidth_percent=".5" />

            <EditText
                android:id="@+id/update_Contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_horizontal"
                android:hint="@string/editContact"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/DarkerGrey"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintVertical_bias=".25"
                app:layout_constraintWidth_percent=".5" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:alpha="0.5"
            android:background="#585858" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2.5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/update_Gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_bg"
                android:gravity="center_horizontal"
                android:hint="@string/editGender"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="25dp"
                android:paddingBottom="10dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="@color/DarkerGrey"
                android:textSize="13sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintVertical_bias=".25"
                app:layout_constraintWidth_percent=".5" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="5dp"
            android:alpha="0.5"
            android:background="#585858" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/update_button_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:backgroundTint="@color/textBlue"
                android:textColor="@color/white"
                android:elevation="10dp"
                android:text="Reset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView5" />
            <Button
                android:id="@+id/update_button_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:paddingLeft="35dp"
                android:paddingRight="35dp"
                android:text="Confirm"
                android:textColor="@color/white"
                android:backgroundTint="@color/greenJoinBtnColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:elevation="10dp"
                app:layout_constraintTop_toBottomOf="@+id/appCompatImageView5" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>