<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Survey"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/overallLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:layout_toStartOf="@+id/eventcircle"
                android:padding="20dp"
                android:text="Feedback"
                android:textColor="#70615C"
                android:textSize="25dp" />

            <ImageView
                android:id="@+id/eventcircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/eventcircle1"

                android:layout_marginEnd="58dp"
                android:src="@drawable/eventcircle" />

            <ImageView
                android:id="@+id/eventcircle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/eventcircle2"
                android:layout_marginEnd="58dp"
                android:src="@drawable/eventcircle1" />

            <ImageView
                android:id="@+id/eventcircle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="33dp"
                android:src="@drawable/eventcircle2" />


        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rating"
            android:textColor="@color/DarkerGrey"
            android:layout_below="@+id/overallLinear"
            android:layout_centerHorizontal="true"
            android:paddingTop="20dp"
            android:id="@+id/ratingTextView"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_below="@id/ratingTextView"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_centerInParent="true"
            android:id="@+id/ratingStarGroup1"
            android:numStars="5"
            android:theme="@style/RatingBar"
            android:stepSize="1"
            >


        </RatingBar>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/ratingStarGroup1"
            android:layout_centerHorizontal="true"
            android:id="@+id/q1toq3">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Rate the level of engagement of event"
                    android:textColor="@color/DarkerGrey"/>
                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:theme="@style/RatingBar"
                    android:stepSize="1"

                    android:id="@+id/ratingStarGroup2"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/q1toq3"
            android:layout_marginTop="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/q4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textColor="@color/DarkerGrey"
                android:paddingLeft="5dp"
                android:paddingBottom="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:scrollbars="vertical"
                android:textColor="@color/DarkerGrey"
                android:background="@drawable/edit_text_bg"
                android:id="@+id/editText1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/q4"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/q5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textColor="@color/DarkerGrey"
                android:paddingLeft="5dp"
                android:paddingBottom="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:scrollbars="vertical"
                android:background="@drawable/edit_text_bg"
                android:id="@+id/editText2"
                android:textColor="@color/DarkerGrey"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/q5"
            android:layout_marginTop="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/q6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6"
                android:textColor="@color/DarkerGrey"
                android:paddingLeft="5dp"
                android:paddingBottom="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:scrollbars="vertical"
                android:textColor="@color/DarkerGrey"
                android:background="@drawable/edit_text_bg"
                android:id="@+id/editText3"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/q6"
            android:layout_centerHorizontal="true"
            android:id="@+id/lq">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rate the level of engagement of event"
                android:textColor="@color/DarkerGrey"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:theme="@style/RatingBar"
                android:stepSize="1"
                android:id="@+id/ratingStarGroup3"/>

        </LinearLayout>



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/lq"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="30dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/DarkerGrey"
                android:text="SUBMIT"
                android:textColor="@color/white"
                android:layout_centerInParent="true"
                android:layout_marginRight="20dp"
                android:id="@+id/submitSurveyBtn"/>

        </RelativeLayout>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>